--- a/Hipervinculos/ejercicioHiperVinculos.html
+++ b/Hipervinculos/ejercicioHiperVinculos.html
@@ -9,8 +9,9 @@
     <p>
       <img src="img/concert_logo.png" alt="Imagen de Concierto" width="150px">
       <strong style="font-size: 40px"> Tu concierto</strong>
-
-
+    </p>
+    <p>
+      <h1> <img src="img/concert_logo.png" alt="Imagen de Concierto" width="150px"> Tu Concierto</h1>
     </p>
     <p>
       Bienvenido a este blog de concierto
