--- a/CURSO 2 CSS DISEÑO WEB RESPONSIVE/UNIDAD 1 INTRODUCCION CSS/Selectores de Etiqueta/Hoja Vida Jrojas/index.html
+++ b/CURSO 2 CSS DISEÑO WEB RESPONSIVE/UNIDAD 1 INTRODUCCION CSS/Selectores de Etiqueta/Hoja Vida Jrojas/index.html
@@ -11,6 +11,15 @@
         <img src="img/logoJrojasImg.svg" width="20%">
         <h1>Hoja de Vida</h1>
         <h2>Julian Geardo Rojas</h2>
+        <h2>Julian Geardo Rojas2</h2>
+        <b>Contenido Hoja de Vida</b>
+        <nav>
+          <ul>
+            <li> <a  href="index.html">Inicio</a></li>
+            <li> <a  href="educacion.html">Educación</a></li>
+            <li> <a  href="experiencia.html">EXperiencia</a></li>
+          </ul>
+        </nav>
     </header>
     <nav>
       <ul>
