--- a/CURSO 2 CSS DISEÑO WEB RESPONSIVE/UNIDAD 2 PROPIEDADES CSS/Propiedades de visualización y organización/Propiedades Color y Fondo/index.html
+++ b/CURSO 2 CSS DISEÑO WEB RESPONSIVE/UNIDAD 2 PROPIEDADES CSS/Propiedades de visualización y organización/Propiedades Color y Fondo/index.html
@@ -10,7 +10,7 @@
     <!-- Encabezado de la página -->
     <header id="banner" class="body">
       <!-- Título de la página -->
-      <h1><a href="#">CSS3 <strong>Propiedades de Color, Fondo y Degradado</strong></a></h1>
+      <h1><a href="#">CSS3 JROJAS <strong>Propiedades de Color, Fondo y Degradado</strong></a></h1>
       <!-- Barra de menú -->
       <nav>
         <ul>
