--- a/CURSO 1 FUNDAMENTOS HTML/PROYECTO_FINAL/index.html
+++ b/CURSO 1 FUNDAMENTOS HTML/PROYECTO_FINAL/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewreport" content="width=device-width, user-scalable=no" !>
-    <title>Julian Rojas</title>
+    <title>Julian Rojas AGuirre</title>
   </head>
   <body>
     <header>
