--- a/CURSO 1 FUNDAMENTOS HTML/PROYECTO_FINAL/educacion.html
+++ b/CURSO 1 FUNDAMENTOS HTML/PROYECTO_FINAL/educacion.html
@@ -8,7 +8,7 @@
   <body>
     <header>
         <img src="img/logoJrojasImg.svg" width="20%">
-        <h1>Hoja de Vida</h1>
+        <h1>Hoja de Vida1</h1>
         <h2>Julian Geardo Rojas</h2>
     </header>
     <nav>
